<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_productos"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvcodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etcodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codigo_del_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcodigo" />

    <TextView
        android:id="@+id/tvdescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etcodigo" />

    <EditText
        android:id="@+id/etdescipcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdescripcion" />

    <TextView
        android:id="@+id/tvprecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdescipcion" />

    <EditText
        android:id="@+id/etprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvprecio" />

    <Button
        android:id="@+id/btn_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Alta"
        android:text="@string/btn_alta"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etprecio" />

    <Button
        android:id="@+id/btn_consultar_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ConsultaPorCodigo"
        android:text="@string/btn_consultar_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_alta" />

       <Button
        android:id="@+id/btn_modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Modificar"
        android:text="@string/btn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultar_codigo" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="baja"
        android:text="@string/btn_eliminar_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

</androidx.constraintlayout.widget.ConstraintLayout>